--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,12 @@
   "dependencies": {
     "@prisma/client": "^6.7.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "4.21.1",
     "express-async-errors": "^3.1.1",
+    "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "prisma": "^6.7.0",
