--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.11",
     "@react-navigation/native-stack": "^7.3.16",
     "@react-navigation/stack": "^7.3.4",
+    "axios": "^1.10.0",
     "expo": "~53.0.11",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
