--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only src/server.ts"
+    "dev": "dotenv -e .env.dev -- ts-node-dev --transpile-only src/server.ts",
+    "main": "dotenv -e .env -- ts-node-dev --transpile-only src/server.ts",
+    "prisma:dev": "dotenv -e .env.dev -- npx prisma migrate dev",
+    "prisma:main": "dotenv -e .env -- npx prisma migrate deploy",
+    "generate:dev": "dotenv -e .env.dev -- npx prisma/client generate",
+    "generate:main": "dotenv -e .env -- npx prisma/client  generate",
+    "start": "node dist/server.js"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
@@ -13,11 +19,12 @@
     "@types/express-fileupload": "^1.5.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
+    "dotenv-cli": "^10.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@prisma/client": "^6.7.0",
+    "@prisma/client": "^6.15.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
