:sparkles: feat: criação de mesa

--- a/backend/.env.dev
+++ b/backend/.env.dev
@@ -12,5 +12,5 @@ JWT_SECRET=98388750f63fac47136942aaf8ac79ce
 
 # Cloudinary
 CLOUDINARY_NAME=dsq3pnxaf
-CLOUDINARY_KEY= 591285311179779
+CLOUDINARY_KEY=591285311179779
 CLOUDINARY_SECRET=sTA7AjIoqS9aJ4aJSAILcqkTYAs
