--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "release": "dotenv -e .env.release -- ts-node-dev --transpile-only src/server.ts",
     "prisma:release": "dotenv -e .env.release -- npx prisma migrate deploy",
     "prisma:main": "dotenv -e .env.main -- npx prisma migrate deploy",
-    "generate:release": "dotenv -e .env.release -- npx prisma/client generate",
+    "generate:release": "dotenv -e .env.release -- npx prisma generate",
     "generate:main": "dotenv -e .env.prod -- npx prisma generate",
     "db:release": "dotenv -e .env.release -- npx prisma db push",
     "db:main": "dotenv -e .env.main -- npx prisma db push",
@@ -23,6 +23,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "dotenv-cli": "^10.0.0",
+    "prisma": "^6.16.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
@@ -36,7 +37,6 @@
     "express-async-errors": "^3.1.1",
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.2",
-    "prisma": "^6.7.0"
+    "multer": "^1.4.5-lts.2"
   }
 }
