--- a/backend/package.json
+++ b/backend/package.json
@@ -1,31 +1,17 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
   "license": "MIT",
+  "author": "",
+  "type": "commonjs",
+  "main": "index.js",
   "scripts": {
     "dev": "dotenv -e .env -- ts-node-dev --transpile-only src/server.ts",
     "main": "dotenv -e .env.main -- ts-node-dev --transpile-only src/server.ts",
-    "release": "dotenv -e .env.release -- ts-node-dev --transpile-only src/server.ts",
-    "prisma:release": "dotenv -e .env.release -- npx prisma migrate deploy",
-    "prisma:main": "dotenv -e .env.main -- npx prisma migrate deploy",
-    "generate:release": "dotenv -e .env.release -- npx prisma generate",
     "generate:main": "dotenv -e .env.prod -- npx prisma generate",
-    "db:release": "dotenv -e .env.release -- npx prisma db push",
     "db:main": "dotenv -e .env.main -- npx prisma db push",
     "start": "node dist/server.js"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^3.0.0",
-    "@types/cors": "^2.8.18",
-    "@types/express": "^5.0.1",
-    "@types/express-fileupload": "^1.5.1",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/multer": "^1.4.12",
-    "dotenv-cli": "^10.0.0",
-    "prisma": "^6.16.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@prisma/client": "^6.16.1",
@@ -38,5 +24,17 @@
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
+    "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.1",
+    "@types/express-fileupload": "^1.5.1",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
+    "dotenv-cli": "^10.0.0",
+    "prisma": "^6.16.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
   }
 }
