--- a/pizzaApp/package.json
+++ b/pizzaApp/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/native-stack": "^7.3.26",
     "@react-navigation/stack": "^7.4.8",
     "axios": "^1.12.2",
-    "expo": "~54.0.10",
+    "expo": "54.0.12",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~17.0.8",
     "expo-font": "~14.0.8",
@@ -25,7 +25,7 @@
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "~1.11.0",
-    "react-native-reanimated": "~4.1.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg-transformer": "^1.5.1",
