--- a/pizzaApp/package.json
+++ b/pizzaApp/package.json
@@ -30,7 +30,8 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg-transformer": "^1.5.1",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
