--- a/mobile/package.json
+++ b/mobile/package.json
@@ -25,7 +25,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "^19.2.2",
+    "@types/react-native": "^0.73.0",
     "typescript": "~5.8.3"
   },
   "private": true
