--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:root@localhost:5432/pizzaria?schema=public"
+DATABASE_URL="postgresql://postgres:enzo565@localhost:5432/pizzaria?schema=public"
 
 # Secret JWT https://www.md5hashgenerator.com/
 JWT_SECRET=98388750f63fac47136942aaf8ac79ce
