--- a/backend/.env.main
+++ b/backend/.env.main
@@ -5,7 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # Connexão banco de dados da Branch Dev
-DATABASE_URL="postgresql://postgres.zvjewulbmctxjwbfkafj:PizzariaMain02@aws-1-sa-east-1.pooler.supabase.com:5432/postgres"
+DATABASE_URL="postgresql://postgres:enzo565@localhost:5432/pizzaria?schema=public"
 
 # Secret JWT https://www.md5hashgenerator.com/
 JWT_SECRET=98388750f63fac47136942aaf8ac79ce
