--- a/pizzaApp/package.json
+++ b/pizzaApp/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/native-stack": "^7.3.26",
     "@react-navigation/stack": "^7.4.8",
     "axios": "^1.12.2",
-    "expo": "^54.0.21",
+    "expo": "~54.0.25",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~17.0.8",
     "expo-font": "~14.0.9",
