--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@prisma/client": "^6.18.0",
     "axios": "^1.12.2",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^3.0.3",
     "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -25,6 +25,7 @@
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.10",
     "qrcode": "^1.5.4"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@types/express-fileupload": "^1.5.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
+    "@types/nodemailer": "^7.0.4",
     "dotenv-cli": "^10.0.0",
     "prisma": "^6.18.0",
     "ts-node-dev": "^2.0.0",
