--- a/pizzaApp/package.json
+++ b/pizzaApp/package.json
@@ -16,11 +16,13 @@
     "@react-navigation/native-stack": "^7.3.26",
     "@react-navigation/stack": "^7.4.8",
     "axios": "^1.12.2",
+    "bcryptjs": "^3.0.3",
     "expo": "~54.0.25",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~17.0.8",
     "expo-font": "~14.0.9",
     "expo-status-bar": "~3.0.8",
+    "nodemailer": "^7.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "^0.81.5",
@@ -33,6 +35,8 @@
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "~19.1.0",
     "typescript": "~5.9.2"
   },
