:bugfix: arrumando favoritos e página de perfil (erro axios)

--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-# Connexão banco de dados da Branch Dev
 DATABASE_URL="postgresql://postgres:enzo565@localhost:5432/pizzaria?schema=public"
 
 # Secret JWT https://www.md5hashgenerator.com/
@@ -12,5 +11,5 @@ JWT_SECRET=98388750f63fac47136942aaf8ac79ce
 
 # Cloudinary
 CLOUDINARY_NAME=dsq3pnxaf
-CLOUDINARY_KEY=591285311179779
+CLOUDINARY_KEY= 591285311179779
 CLOUDINARY_SECRET=sTA7AjIoqS9aJ4aJSAILcqkTYAs
