--- a/pizzaApp/package.json
+++ b/pizzaApp/package.json
@@ -21,6 +21,7 @@
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~17.0.8",
     "expo-font": "~14.0.9",
+    "expo-module-scripts": "^5.0.7",
     "expo-status-bar": "~3.0.8",
     "nodemailer": "^7.0.10",
     "react": "19.1.0",
