--- a/pizzaApp/package.json
+++ b/pizzaApp/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "github:react-native-community/datetimepicker",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
@@ -21,6 +22,7 @@
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~17.0.8",
     "expo-font": "~14.0.9",
+    "expo-linear-gradient": "^15.0.7",
     "expo-module-scripts": "^5.0.7",
     "expo-status-bar": "~3.0.8",
     "nodemailer": "^7.0.10",
